--- a/NewsTagil/src/main/res/layout-xlarge/composite_second_button_nav.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_second_button_nav.xml
@@ -1,40 +1,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".MainActivity" >
+    >
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/xlarge_second_button_height"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="#000"
         android:paddingLeft="0dp" >
 
-        <Button
+        <ImageView
             android:id="@+id/like"
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/second_nav_like" />
+            android:scaleType="fitXY"
+            android:src="@drawable/second_nav_like"
+            android:background="@color/lightGray"/>
 
-        <Button
+        <ImageView
             android:id="@+id/comment"
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/xlarge_second_button_height"
             android:layout_weight="1"
-            android:background="@drawable/second_nav_comment" />
+            android:background="@color/lightGray"
+            android:scaleType="fitXY"
+            android:src="@drawable/second_nav_comment"/>
 
-        <Button
+        <ImageView
             android:id="@+id/elect"
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/xlarge_second_button_height"
             android:layout_weight="1"
-            android:background="@drawable/second_nav_elect" />
+            android:background="@color/lightGray"
+            android:scaleType="fitXY"
+            android:src="@drawable/second_nav_elect"/>
     </LinearLayout>
 
 </RelativeLayout>
