--- a/NewsTagil/src/main/res/layout/activity_ads.xml
+++ b/NewsTagil/src/main/res/layout/activity_ads.xml
@@ -6,14 +6,14 @@
    >
 
     <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:id="@+id/activity_ads_include" />
 
     <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/activity_ads_include"
