--- a/NewsTagil/src/main/res/layout/activity_ads.xml
+++ b/NewsTagil/src/main/res/layout/activity_ads.xml
@@ -21,7 +21,7 @@
 
     <ru.news.tagil.utility.myScrollView
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:paddingBottom="10dp"
             android:id="@+id/ads_scroller"
             android:layout_below="@+id/ads_selector">
