--- a/NewsTagil/src/main/res/layout-xlarge/composite_header.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_header.xml
@@ -20,38 +20,49 @@
             android:orientation="horizontal" >
 
             <Button
-                android:id="@+id/composite_header_main"
+                    android:id="@+id/composite_header_back_button"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="42dp"
+                    android:layout_height="36dp"
+                    android:background="@drawable/back_header_button"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:text="" />
+
+            <Button
+                android:id="@+id/composite_header_first_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="33dp"
-                android:layout_centerVertical="true"
                 android:textSize="33dp"
+                android:layout_toRightOf="@+id/composite_header_back_button"
+                android:layout_alignBaseline="@+id/composite_header_back_button"
                 android:background="@color/Transparent"
-                android:text="@string/header_main_button"
                 android:textColor="#4D433A" />
 
             <Button
-                android:id="@+id/composite_header_contact"
+                android:id="@+id/composite_header_second_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="33dp"
                 android:textSize="33dp"
                 android:background="@color/Transparent"
-                android:text="@string/header_main_contact"
                 android:textColor="#4D433A"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/composite_header_main"/>
+                android:layout_alignBaseline="@+id/composite_header_first_button"
+                android:layout_toRightOf="@+id/composite_header_first_button"/>
 
             <Button
-                android:id="@+id/composite_header_ads"
+                android:id="@+id/composite_header_third_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="33dp"
                 android:textSize="33dp"
-                android:text="@string/ads"
+                android:background="@color/Transparent"
                 android:textColor="#4D433A"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/composite_header_contact"/>
+                android:layout_alignBaseline="@+id/composite_header_second_button"
+                android:layout_toRightOf="@+id/composite_header_second_button"/>
 
             <Button
                 android:id="@+id/composite_header_update"
@@ -61,7 +72,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="30dp"
                 android:background="@drawable/first_header_button"
-                android:layout_alignParentTop="true"
+                android:layout_alignBottom="@+id/composite_header_back_button"
                 android:layout_alignParentRight="true"/>
 
         </RelativeLayout>
@@ -87,10 +98,10 @@
 
                 
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                     >
 
                     <TextView
                         android:id="@+id/composite_header_now"
@@ -100,7 +111,21 @@
                         android:layout_marginTop="7dp"
                         android:text="сейчас:"
                         android:textColor="#FC8000"
-                        android:textSize="25dp" />
+                        android:textSize="25dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"/>
+
+
+                    <TextView
+                            android:id="@+id/composite_header_weather_now"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#FC8000"
+                            android:textSize="25dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_toRightOf="@+id/composite_header_now"
+                            android:layout_alignTop="@+id/composite_header_now"
+                            android:layout_alignBottom="@+id/composite_header_now"/>
 
                    <TextView
                         android:id="@+id/composite_header_tomorrow"
@@ -110,9 +135,21 @@
                         android:layout_marginTop="0dp"
                         android:textSize="25dp"
                         android:textColor="#fff"
-                        android:text="завтра:" />
-                    
-                </LinearLayout>
+                        android:text="завтра:"
+                        android:layout_alignParentLeft="true"
+                        android:layout_below="@+id/composite_header_now"/>
+
+                    <TextView
+                            android:id="@+id/composite_header_weather_tommorow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#FC8000"
+                            android:textSize="25dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_alignTop="@+id/composite_header_tomorrow"
+                            android:layout_toRightOf="@+id/composite_header_tomorrow"
+                            android:layout_alignBottom="@+id/composite_header_tomorrow"/>
+                </RelativeLayout>
 
             </LinearLayout>
 
