--- a/NewsTagil/src/main/res/layout-large/composite_header_simple.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_header_simple.xml
@@ -20,26 +20,28 @@
                 android:orientation="horizontal" >
 
             <Button
-                    android:id="@+id/header_ads_back_button"
+                    android:id="@+id/composite_header_simple_back_button"
                     style="?android:attr/buttonStyleSmall"
                     android:layout_marginTop="12dp"
                     android:layout_marginLeft="10dp"
                     android:layout_width="42dp"
                     android:layout_height="36dp"
                     android:background="@drawable/back_header_button"
-                    android:text="" />
+                    android:text=""
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"/>
 
 
-            <TextView
-                    android:id="@+id/header_ads_link"
+            <Button
+                    android:id="@+id/composite_header_simple_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="22dp"
                     android:textSize="22dp"
-                    android:text="Объявления"
                     android:textColor="#4D433A"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/header_ads_back_button"/>
+                    android:background="@color/Transparent"
+                    android:layout_alignBaseline="@+id/composite_header_simple_back_button"
+                    android:layout_toRightOf="@+id/composite_header_simple_back_button"/>
 
             <Button
                     style="?android:attr/buttonStyleSmall"
@@ -47,10 +49,10 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/first_header_button"
-                    android:id="@+id/header_ads_button_update"
-                    android:layout_alignParentTop="true"
+                    android:id="@+id/composite_header_simple_update"
+                    android:layout_alignBottom="@+id/composite_header_simple_back_button"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="20dp"/>
 
 
         </RelativeLayout>
@@ -71,31 +73,54 @@
                     android:layout_marginTop="2dp"
                     android:src="@drawable/first_header_cloud" />
 
-            <LinearLayout
+            <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical" >
+                    android:layout_height="match_parent" >
 
                 <TextView
-                        android:id="@+id/header_ads_text_today"
+                        android:id="@+id/composite_header_simple_text_today"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="2dp"
                         android:text="сейчас:"
                         android:textColor="#FC8000"
-                        android:textSize="16dp" />
+                        android:textSize="16dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"/>
+                <TextView
+                        android:id="@+id/composite_header_simple_weather_now"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FC8000"
+                        android:textSize="16dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@+id/composite_header_simple_text_today"
+                        android:layout_alignBottom="@+id/composite_header_simple_text_today"/>
 
                 <TextView
-                        android:id="@+id/header_ads_text_tomorrow"
+                        android:id="@+id/composite_header_simple_text_tomorrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="0dp"
                         android:textSize="16dp"
                         android:textColor="#fff"
-                        android:text="завтра:" />
-            </LinearLayout>
+                        android:text="завтра:"
+                        android:layout_alignParentLeft="true"
+                        android:layout_below="@+id/composite_header_simple_text_today"/>
+
+                <TextView
+                        android:id="@+id/composite_header_simple_weather_tommorow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#FC8000"
+                        android:textSize="16dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@+id/composite_header_simple_text_tomorrow"
+                        android:layout_alignBottom="@+id/composite_header_simple_text_tomorrow"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
